# docs/swagger.json
@@ -10,13 +10,67 @@
     "basePath": "/api/v1",
     "paths": {
         "/api/v1/avatar": {
-            "post": {
+            "get": {
                 "description": "Signing user in",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Get Avatar Route",
+                "operationId": "get-avatar",
+                "parameters": [
+                    {
+                        "description": "multipart/form-data",
+                        "name": "Data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/delivery.ResponseError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/delivery.ResponseError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/delivery.ResponseError"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Set user avatar",
                 "consumes": [
                     "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "User"
                 ],
                 "summary": "Set Avatar Route",
                 "operationId": "set-avatar",
@@ -59,57 +113,28 @@
                 }
             }
         },
-        "/api/v1/profile": {
-            "get": {
-                "description": "Signing user in",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Get Profile Route",
-                "operationId": "get-profile",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/delivery.ResponseError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/delivery.ResponseError"
-                        }
-                    }
-                }
-            },
+        "/api/v1/login": {
             "post": {
-                "description": "Signing user in",
+                "description": "Logging user in",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Edit Profile Route",
-                "operationId": "edit-profile",
+                "tags": [
+                    "User"
+                ],
+                "summary": "LogIn Route",
+                "operationId": "log-in-user",
                 "parameters": [
                     {
-                        "description": "JSON that contains user data to edit",
+                        "description": "JSON that contains user login data",
                         "name": "Data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/models.UserEdit"
+                            "type": "object"
                         }
                     }
                 ],
@@ -141,26 +166,104 @@
                 }
             }
         },
-        "/api/v1/signin": {
-            "post": {
-                "description": "Signing user in",
+        "/api/v1/logout": {
+            "get": {
+                "description": "Logging user out",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "SignIn Route",
-                "operationId": "sign-in-user",
+                "tags": [
+                    "User"
+                ],
+                "summary": "Log Out Route",
+                "operationId": "log-out-user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/delivery.ResponseError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/delivery.ResponseError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/delivery.ResponseError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/profile": {
+            "get": {
+                "description": "Get user profile",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Get Profile Route",
+                "operationId": "get-profile",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/delivery.ResponseError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/delivery.ResponseError"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Edit user profile",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Edit Profile Route",
+                "operationId": "edit-profile",
                 "parameters": [
                     {
-                        "description": "JSON that contains user login data",
+                        "description": "JSON that contains user data to edit",
                         "name": "Data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/models.UserLogin"
+                            "type": "object"
                         }
                     }
                 ],
@@ -201,6 +304,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "User"
+                ],
                 "summary": "SignUp Route",
                 "operationId": "sign-up-user",
                 "parameters": [
@@ -210,8 +316,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/models.UserReg"
+                            "type": "object"
                         }
                     }
                 ],
@@ -220,6 +325,48 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/delivery.ResponseError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/delivery.ResponseError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/delivery.ResponseError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/tracks/popular": {
+            "post": {
+                "description": "Getting popular tracks",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Track"
+                ],
+                "summary": "Get Popular Tracks Route",
+                "operationId": "get-popular-tracks",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Track"
                         }
                     },
                     "400": {
@@ -253,6 +400,26 @@
                 }
             }
         },
+        "models.Track": {
+            "type": "object",
+            "properties": {
+                "album": {
+                    "type": "string"
+                },
+                "artist": {
+                    "type": "string"
+                },
+                "duration": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "photo": {
+                    "type": "string"
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "properties": {
@@ -266,67 +433,12 @@
                 "email": {
                     "type": "string"
                 },
-                "name": {
+                "nickname": {
                     "type": "string"
                 },
                 "role": {
                     "description": "0 - user; 1 - admin;",
                     "type": "integer"
-                },
-                "surname": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.UserEdit": {
-            "type": "object",
-            "required": [
-                "name",
-                "surname"
-            ],
-            "properties": {
-                "name": {
-                    "type": "string"
-                },
-                "surname": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.UserLogin": {
-            "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.UserReg": {
-            "type": "object",
-            "required": [
-                "email",
-                "password",
-                "username"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         }
